0.6.3 (2011-11-29)
------------------

- Allow to use a TRANSMETA_LANGUAGES settings.


0.6.2 (2011-03-22)
------------------

- works when default locale have spelling variants as es-ES or en-US.


0.6.1 (2011-03-17)
------------------

- get_all_translatable_fields does not returned the correct tuple. Problems with inheritance.

0.6.0 (2011-02-24)
------------------

- Make compatible with Django 1.2 and 1.3 when using ugettext_lazy in models verbose_name, fixing a hidden bug also for Django 1.1
